--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "nikic/fast-route": "^1.3",
         "twig/twig": "^3.0",
-      "ext-pdo": "*"
+      "ext-pdo": "*",
+        "php-di/php-di": "^6.3"
     }
 }
